<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">易隆物业</string>
    <string name="str_checkdevice">CheckDevice</string>
    <string name="str_open">open</string>
    <string name="str_close">close</string>
    <string name="str_matched">Matched</string>
    <string name="str_openimg">OpenImage</string>
    <string name="str_create2d">Create2d</string>
    <string name="str_createbar">CreateBar</string>
    <string name="str_order">SendOrder</string>
    <string name="str_scan">Scan</string>
    <string name="str_printword">打印</string>
    <string name="str_printimg">PrintImage</string>
    <string name="str_disconnect">Disconnected</string>
    <string name="str_device">BlueToothDevice</string>
    <string name="str_scaning">Scaning</string>
    <string name="str_unconnected">UnConnected!</string>
    <string name="str_succonnect">Success Connected!</string>
    <string name="str_faileconnect">Faile Connected!</string>
    <string name="str_lose">Connection Lose!</string>
    <string name="str_cannotcreate2d">Can Not Create two-dimension code! </string>
    <string name="str_cannotcreatebar">Can Not Create Barcode</string>
    <string name="str_devecehasblue">This device has a bluetooth device!</string>
    <string name="str_nomatched">No matching equipment!</string>
    <string name="str_connected">Connected</string>
    <string name="str_disconnected">No Connect</string>
    <string name="str_connecting">Connecting</string>
    <string name="str_hasnodevice">No bluetooth device!</string>
    <string name="str_scanover">Scanning Complete!</string>
    <string name="edit_company_code_hint">公司代码:</string>
    <string name="edit_user_name_hint">&#160;&#160;&#160;&#160;用户名:</string>
    <string name="edit_password_hint">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;密码:</string>
    <string name="btn_login_text">登录</string>
    <string name="btn_login_loading_text">正在登录...</string>
    <string name="btn_login_failure_text">登录失败,请检查网络连接</string>
    <string name="btn_query_text">查询</string>
    <string name="edit_room_no_hint">请输入房间编号</string>
    <string name="txt_room_no_text">房间编号:</string>
    <string name="txt_room_info_format_text">房号:%1$s&#160;户主:%2$s&#160;交房日期:%3$s&#160;建筑面积:%4$s</string>
    <string name="txt_total_price_format_text">总金额:%1$s</string>
    <string name="btn_normal_fee_text">应收费</string>
    <string name="btn_other_fee_text">其他费</string>
    <string name="btn_advance_fee_text">预收费</string>
    <string name="txt_arrears_format_text">%1$s&#160;起止数:%2$s~%3$s&#160;数量:%4$s&#160;单价:%5$s&#160;金额:%6$s&#160;</string>
    <string name="txt_other_arrears_format_text">%1$s&#160;单价:%2$s&#160;金额:%3$s&#160;</string>
    <string name="btn_delete_text">删除</string>
    <string name="btn_edit_text">编辑</string>
    <string name="txt_current_area_format_text">当前小区:</string>
    <string name="btn_change_area_text">切换小区</string>
    <string name="charge_expand_list_item_group_text">应收费</string>
    <string name="other_expand_list_item_group_text">其他费</string>
    <string name="pre_expand_list_item_group_text">预收费</string>
    <string name="txt_fee_name_text">费用名称:</string>
    <string name="txt_start_no_text">起&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;数:</string>
    <string name="txt_end_no_text">止&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;数:</string>
    <string name="txt_amount_text">数&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;量:</string>
    <string name="txt_price_text">单&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;价:</string>
    <string name="txt_total_amount_text">金&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;额:</string>
    <string name="btn_submit_text">确定</string>
    <string name="btn_charge_text">收费</string>
    <string name="btn_reprint_text">打票</string>
    <string name="dialog_confirm_title">确定收费么?</string>
    <string name="dialog_ok_title">确定</string>
    <string name="dialog_cancel_title">取消</string>
    <string name="txt_connecting_text">正在连接...</string>
    <string name="btn_query_loading_text">正在查询...</string>
    <string name="chk_remeber_pwd_text">记住密码</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">收费</string>
    <string name="title_section2">打印</string>
    <string name="title_section3">票据</string>
    <string name="action_settings">Settings</string>
    <string name="txt_fee_type_text">费用类型:</string>

     <!--BTPrinterDemo-->
    <string name="send">发送</string>
    <string name="Print">打印</string>
    <string name="Clear">清空</string>
    <string name="not_connected">请先连接蓝牙打印机（连接）</string>
    <string name="bt_not_enabled_leaving">蓝牙没有启动，退出程序</string>
    <string name="title_connecting">正在连接…</string>
    <string name="title_connected_to">已连接: </string>
    <string name="title_not_connected">没有连接</string>
    <string name="default_font_gray_scale">4</string>
    <string name="fontGrayscaleName">打印灰度</string>
    <string name="fontGrayScaleRange">(1~8)</string>

    <!--  DeviceListActivity -->
    <string name="scanning">扫描设备…</string>
    <string name="select_device">选择连接的设备</string>
    <string name="none_paired">没有匹配的设备</string>
    <string name="none_found">没有找到设备</string>
    <string name="title_paired_devices">匹配的设备</string>
    <string name="title_other_devices">其它可用设备</string>
    <string name="button_scan">扫描设备</string>

    <!-- Options Menu -->
    <string name="connect">连接</string>
    <string name="disconnect">断开</string>
</resources>